--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 /* Spacing */
-.highlight, .post h1, h2, h3, p, .post-body ul, .dates, .post-body li, .bio li, audio, video, pre ::before {
+.highlight, h1, h2, h3, p, .post-body ul, .dates, .post-body li, .bio li, audio, video, pre ::before {
 	margin-top: 1em;
 }
 
@@ -29,6 +29,10 @@ body {
 }
 
 /* Profile */
+
+header h1 {
+	margin-top: 0;
+}
 
 .profile #wrapper {
 	margin: 0 auto;
