--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ body {
 
 /* Profile */
 
+header a {
+	box-shadow: none;
+}
+
 header h1 {
 	margin-top: 0;
 }
@@ -151,17 +155,13 @@ code.highlighter-rouge {
 a {
 	text-decoration: none;
 	color: #000;
-}
-
-nav.main-nav a, #footer a, #post-nav a, p a {
-	color: #000;
 	font-weight: 500;
 	box-shadow: inset 0 -2px 0 #fcdae9;
 	transition: all .35s;
   transition-timing-function: cubic-bezier(.7, 0, .3, 1);
 }
 
-nav.main-nav a:hover, #footer a:hover, #post-nav a:hover, p a:hover {
+a:hover {
 	box-shadow: inset 0 -25px 0 #fcdae9;
 }
 
