--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,17 @@ layout: default
 
 <article class="h-entry post">
   <header>
+    <ul class="h-card p-author author hidden">
+      <li>
+        <a class="u-url" href="{{ "/" | relative_url  }}" rel="me"><span class="p-author">{{ site.author }}</span></a>
+      </li>
+      <li>
+        <img class="u-photo" src="{{ "/" | relative_url  }}assets/images/avatar.svg" alt="">
+      </li>
+      <li>
+        <a href="mailto:{{ site.email }}" class="u-email" rel="me">{{ site.email }}</a>
+      </li>
+    </ul>
     <h1 class="p-name">{{ page.title }}</h1>
     <h2 class="headline">
       <time class="dt-published" datetime="{{ page.date }}">
@@ -17,9 +28,9 @@ layout: default
 </article>
 <section id="post-meta" class="clearfix">
   <a href="/">
-    <img class="u-photo avatar" src="{{ "/" | relative_url  }}assets/images/avatar.svg">
+    <img class="avatar" src="{{ "/" | relative_url  }}assets/images/avatar.svg">
     <div>
-      <span class="p-author h-card dark">{{ site.author }}</span>
+      <span class="dark">{{ site.author }}</span>
       <span>{{ site.description }}</span>
     </div>
   </a>
